--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,4 +1,5 @@
-FROM almalinux:9
+ARG version
+FROM almalinux:${version}
 ARG course="DevOps with AWS" \
     duration= "120HRS"
 RUN echo "Course: $course , Duration: $duration"
