--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,5 +1,5 @@
 ARG version
-FROM almalinux:${version}
+FROM almalinux:${version:-9}
 ARG course="DevOps with AWS" \
     duration= "120HRS"
 RUN echo "Course: $course , Duration: $duration"
