--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -2,5 +2,5 @@ ARG version
 FROM almalinux:${version:-9}
 ARG course="DevOps with AWS" \
     duration= "120HRS"
-RUN echo "Course: $course , Duration: $duration"
+RUN echo "Course: $course , Duration: $duration , version: $version"
 CMD ["sleep", "100"]
