--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -3,5 +3,5 @@ FROM almalinux:${version:-9}
 ARG course="DevOps with AWS" \
     duration= "120HRS"
 ENV duration=$duration
-RUN echo "Course: $course , Duration: $duration , version: $version"
+RUN echo "Course: $course , duration: $duration , version: $version"
 CMD ["sleep", "100"]
